# Anemll

./: .gitignore  AGENTS.md  CLAUDE.md  MODEL-local-transfer-p0.md  README.md  Roadmap.MD  create_uv_env.sh  install_dependencies.sh  pyproject.toml  requirements.txt  setup.py  test_anemll_chat.swift  test_model_list.swift
.claude/: settings.local.json
ANEMLLChat/: APP_STORE_DESCRIPTION.md  DEV_STATUS.md  Package.resolved  Package.swift  README.md  test_download.swift  trace.md
ANEMLLChat/ANEMLL Chat.xcodeproj/: project.pbxproj
ANEMLLChat/ANEMLLChat/: ANEMLLChat.entitlements  Info.plist
ANEMLLChat/ANEMLLChat.xcodeproj/: project.pbxproj
anemll-swift-cli/: Package.swift
anemll/ane_converter/: gemma3_converter.py  llama_converter.py  metadata.py  qwen2_5_converter.py  qwen_converter.py
anemll/models/: gemma3_model.py  llama_model.py  qwen2_5_model.py  qwen_model.py
anemll/utils/: ANE_PROFILER.md  ane_profiler.py  calc_chunk_split.py  check_dependencies.sh  combine_models.py  compile_models.py  convert_model.sh  convert_monolith.sh  (+8 more)
docs/: ANE_converter.md  FP16_SCALING.md  GEMMA3_FP16_SCALING.md  RELEASE_NOTES_0.3.5.md  anemll-dedup.md  calc_chunk_split.md  combine_models.md  compile_models.md  convert.md  convert_model.md  convert_monolith.md  manual_conversion.md  model_conversion_guide_for_AI_agents.md  prepare_hf.md  swift_cli.md  troubleshooting.md
examples/: VARIABLE_CONTEXT.md  variable_context_demo.py
scripts/: convert_qwen25_0.5b_instruct.sh  rebuild_vibethinker_hybrid.sh
tests/: chat.py  chat_full.py  test_gemma3_1B_fp16_2chunk.py  test_gemma3_1B_model.py  test_gemma3_model.py
utils/: combine_models.py
(+84 files in other folders)
