[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anemll"
version = "0.3.5"
description = "Open-source pipeline for accelerating LLMs on Apple Neural Engine (ANE)"
readme = "README.md"
authors = [{name = "ANEMLL Team", email = "realanemll@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.9"  # Specific Python version requirement
dependencies = [
    "coremltools>=9.0",    # Required for Apple Neural Engine conversion
    "numpy>=1.24.0",       # Needed for tensor operations
    "tqdm>=4.66.0",        # Progress bars for large conversions
    "transformers>=4.36.0" # HuggingFace Transformers support
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",   # Code formatting
    "flake8>=7.0.0",    # Linting
    "pytest>=7.4.0",    # Testing
    "pytest-cov>=4.1.0" # Test coverage
]

[tool.setuptools]
packages = ["anemll"]

[project.urls]
"Homepage" = "https://anemll.com"
"Documentation" = "https://anemll.com/docs"
"Repository" = "https://github.com/anemll/anemll"
"Bug Tracker" = "https://github.com/anemll/anemll/issues"
"HuggingFace" = "https://huggingface.co/anemll"
"Twitter" = "https://x.com/anemll"
